src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Descricao__c</fullName>
        <label>Descricao</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roll_Up__c</fullName>
        <label>Roll-Up Summary</label>
        <summarizedField>Line_Itm__c.Line_Item_Total__c</summarizedField>
        <summaryForeignKey>Line_Itm__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Aberto</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fechado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Em negociação</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pendente</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>formula_list__c</fullName>
        <formula>Roll_Up__c / (IF(INCLUDES(lista_multipla__c, &apos;a&apos;), 1, 0) 
+ IF(INCLUDES(lista_multipla__c, &apos;b&apos;), 1, 0) 
+ IF(INCLUDES(lista_multipla__c, &apos;c&apos;), 1, 0)
+ IF(INCLUDES(lista_multipla__c, &apos;d&apos;), 1, 0)
+ IF(INCLUDES(lista_multipla__c, &apos;e&apos;), 1, 0)
+ IF(INCLUDES(lista_multipla__c, &apos;f&apos;), 1, 0)
+ IF(INCLUDES(lista_multipla__c, &apos;g&apos;), 1, 0)
+ IF(INCLUDES(lista_multipla__c, &apos;h&apos;), 1, 0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula_list</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>lista_multipla__c</fullName>
        <label>lista multipla</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>d</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>f</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>g</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>h</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>